<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:text="@string/wight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName|numberDecimal"
        android:textSize="14sp"
        tools:hint="@string/enter_w" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="96dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/editText"
        android:text="Gender"
        android:textOff="M"
        android:textOn="F"
        android:textSize="14sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginTop="25dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:text="@string/drink" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="69dp"
        android:layout_toEndOf="@+id/textView2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 oz"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5 oz" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 oz" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="-96dp"
        android:max="5"
        android:progress="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="9dp"
        android:text="@string/alcohol" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="147dp"
        android:layout_toStartOf="@+id/seekBar"
        android:text="@string/add" />

    <Button
        android:id="@+id/button3"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-209dp"
        android:layout_marginBottom="148dp"
        android:layout_toStartOf="@+id/seekBar"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="100dp"
        android:text="@string/bac"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-106dp"
        android:layout_marginBottom="75dp"
        android:layout_toStartOf="@+id/button3"
        android:max="25"
        android:progress="0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/editText"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="85dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="38dp"
        android:text="@string/status" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="85dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginBottom="37dp" />

</RelativeLayout>